new module - paymethods

--- a/controllers/sales/_scanner_code_bar.htm
+++ b/controllers/sales/_scanner_code_bar.htm
@@ -21,7 +21,7 @@
         <div class="modal-body">
 
                 <div class="layout-row">
-                    <input type="text" name="addProduct[sku]" value="" id="addProductField" placeholder="<?=trans("awme.stockist::lang.sales.barcode_placehold")?>" maxlength="110">
+                    <input type="text" name="addProduct[sku]" value="" id="addProductField" placeholder="<?=trans('awme.stockist::lang.sales.barcode_placehold')?>" maxlength="110" autofocus="true">
                 </div>
 
         </div>
