--- a/controllers/sales/_relation_paymethods_toolbar.htm
+++ b/controllers/sales/_relation_paymethods_toolbar.htm
@@ -1,35 +1,19 @@
-<?php if($options['use_scanner']):?>
-    <a 
-        id="add-by-scanner"
-        data-control = "popup" 
-        data-handler = "onScannerCodeBar"
-        href = "javascript:;" 
-        class = "btn btn-sm btn-warning oc-icon-barcode"
-
-        data-hotkey="ctrl+space"
-        data-toggle="tooltip"
-        data-placement="top"
-        data-delay="500"
-        data-original-title="<?=trans('awme.stockist::lang.sales.scan_code')?> (Ctrl+Space)"
-        >
-        <?=trans("awme.stockist::lang.sales.add_products")?>
-    </a>
-<?endif;?>
 <a
     data-control="popup"
     data-size="huge"
     data-handler="onRelationButtonAdd"
     href="javascript:;"
-    class="btn btn-sm btn-primary oc-icon-plus"
+    class="paymethods-buttons btn btn-sm btn-primary oc-icon-plus"
     
-    data-hotkey="ctrl+alt+space"
+    data-hotkey="F2"
     data-toggle="tooltip"
     data-placement="top"
     data-delay="500"
-    data-original-title="<?=trans('awme.stockist::lang.sales.add_product')?> (Ctrl+Alt+Space)"
+    data-original-title="<?=trans('awme.stockist::lang.sales.add_payment')?> (F2)"
     >
     <?= e(trans('backend::lang.relation.add_name', ['name'=>trans($relationLabel)])) ?>
 </a>
+
 <?php if ($relationViewMode == 'single'): ?>
     <button
         class="btn btn-sm btn-default oc-icon-minus"
@@ -39,8 +23,8 @@
     </button>
 <?php else: ?>
     <button
-        id="product-sale-remove"
-        class="btn btn-sm btn-default oc-icon-minus"
+        id="paymethod-remove"
+        class="paymethods-buttons btn btn-sm btn-default oc-icon-minus"
         onclick="$(this).data('request-data', {
             checked: $('#<?= $this->relationGetId('view') ?> .control-list').listWidget('getChecked')
         })"
@@ -53,7 +37,3 @@
         <?= e(trans('backend::lang.relation.remove')) ?>
     </button>
 <?php endif ?>
-
-<script>
-    $('#paid-recalculate').click();
-</script>
