--- a/controllers/sales/_sale_checkin_toolbar.htm
+++ b/controllers/sales/_sale_checkin_toolbar.htm
@@ -2,13 +2,13 @@
     type="button"
     data-request="onCheckin"
     data-request-confirm="<?=e(trans('awme.stocketist::lang.sales.confirm_closed_sale'))?>"
-    data-hotkey="f2"
+    data-hotkey="F3"
     class="btn btn-lg btn-success oc-icon-money invoice-checkin"
 
     data-toggle="tooltip"
     data-placement="top"
     data-delay="500"
-    data-original-title="Emitir compra (F2)"
+    data-original-title="Emitir compra (F3)"
     >
     Emitir
 </button>
@@ -17,13 +17,13 @@
     type="button"
     data-request="onCheckin"
     data-request-confirm="<?=e(trans('awme.stocketist::lang.sales.confirm_closed_sale'))?>"
-    data-hotkey="f3"
+    data-hotkey="F4"
     class="btn btn-lg btn-primary oc-icon-print invoice-checkin"
 
     data-toggle="tooltip"
     data-placement="top"
     data-delay="500"
-    data-original-title="Imprimir comprobante (F3)"
+    data-original-title="Imprimir comprobante (F4)"
     >
     Imprimir
 </button>
@@ -32,13 +32,13 @@
     type="button"
     data-request="onCheckin"
     data-request-confirm="<?=e(trans('awme.stocketist::lang.sales.confirm_closed_sale'))?>"
-    data-hotkey="f4"
+    data-hotkey="F5"
     class="btn btn-lg btn-warning oc-icon-file invoice-checkin"
 
     data-toggle="tooltip"
     data-placement="top"
     data-delay="500"
-    data-original-title="Emitir presupuesto (F4)"
+    data-original-title="Emitir presupuesto (F5)"
     >
     Presupuestar
 </button>
