--- a/controllers/sales/preview.htm
+++ b/controllers/sales/preview.htm
@@ -1,22 +1,113 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('awme/stockist/sales') ?>">Sales</a></li>
-        <li><?= e($this->pageTitle) ?></li>
+        <li><a href="<?= Backend::url('awme/stockist/sales') ?>"><?=e(trans('awme.stockist::lang.sales.sales'));?></a></li>
+        <li><?=e(trans('awme.stockist::lang.sales.sale'));?> #<?= $formModel->id ?></li>
     </ul>
 <?php Block::endPut() ?>
 
 <?php if (!$this->fatalError): ?>
 
-    <div class="form-preview">
-        <?= $this->formRenderPreview() ?>
+    <div class="scoreboard">
+        <div data-control="toolbar">
+            <div style="margin-left: 25px;" class="scoreboard-item title-value">
+                <h4><?=e(trans('awme.stockist::lang.sales.sale'));?></h4>
+                <p>#<?= $formModel->id ?></p>
+                <p class="description"><?=e(trans('backend::lang.import_export.created'));?>: <?= $formModel->created_at->format('H:i d/m/y') ?></p>
+            </div>
+            <?php if ($formModel->status): ?>
+                <div class="scoreboard-item title-value">
+                    <h4><?=e(trans('awme.stockist::lang.invoice.status'));?></h4>
+                    <p><?= trans('awme.stockist::lang.invoice.sale_'.$formModel->status) ?></p>
+                    <p class="description"><?=e(trans('backend::lang.import_export.updated'));?>: <?= $formModel->updated_at->toFormattedDateString('timesince') ?></p>
+                </div>
+            <?php endif ?>
+            <?php if ($formModel->seller_id): ?>
+                <div class="scoreboard-item title-value">
+                    <h4><?=e(trans('awme.stockist::lang.sales.seller'));?></h4>
+                    <p><?= $formModel->seller->first_name ?></p>
+                    <p class="description"><?= $formModel->seller->fullname ?></p>
+                </div>
+            <?php endif ?>
+            <div class="scoreboard-item title-value">
+                <h4><?=e(trans('awme.stockist::lang.sales.sale'));?></h4>
+                <p>$<?= $formModel->subtotal ?></p>
+                <p class="description"><?=e(trans('awme.stockist::lang.sales.total'));?>: $<?= $formModel->total ?></p>
+            </div>
+        </div>
     </div>
 
-<?php else: ?>
-    <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-<?php endif ?>
+    <div class="form-buttons buttons-offset">
+        <div class="loading-indicator-container">
+            <?php if($formModel->status != 'closed'):?>
+                <a
+                    href="<?= Backend::url('awme/stockist/sales/update/'.$formModel->id) ?>"
+                    class="btn btn-sm btn-primary icon oc-icon-arrow-left pull-left">
+                    <?=e(trans('awme.stockist::lang.sales.edit_sale'));?>
+                </a>
 
-<p>
-    <a href="<?= Backend::url('awme/stockist/sales') ?>" class="btn btn-default oc-icon-chevron-left">
-        <?= e(trans('backend::lang.form.return_to_list')) ?>
-    </a>
-</p>
+            <?endif;?>
+            <?php if($options['allow_print']):?>
+                <a
+                    href="javascript:;" 
+                    id="printInvoice"
+                    class="btn btn-sm btn-default icon oc-icon-print pull-left">
+                    <?=e(trans('awme.stockist::lang.invoice.print'));?>
+                </a>
+            <?endif;?>
+            <div class="dropdown pull-left">
+                <a href="#" data-toggle="dropdown" class="btn btn-primary oc-icon-plus">Estado de Venta</a>
+
+                <ul class="dropdown-menu" role="menu" data-dropdown-title="Add something small">
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="oc-icon-circle-o-notch">Venta abierta</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="oc-icon-pause">Venta pausada</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="oc-icon-gavel">Venta señada</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="oc-icon-file-excel-o">Presupuesto</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="oc-icon-times">Cancelar</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="control-tabs content-tabs tabs-offset" data-control="tab">
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#invoiceTemplate"><?=e(trans('awme.stockist::lang.sales.sale'));?></a></li>
+            <li><a href="#typeLog"><?=e(trans('awme.stockist::lang.invoice.payments'));?></a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane active">
+                <div class="padded-container">
+                    <?= $this->makePartial('invoice_iframe') ?>
+                </div>
+            </div>
+            <div class="tab-pane">
+                <div class="relation-flush">
+                    <?= $this->relationRender('invoice_pay_methods') ?>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+<script>
+    $('#printInvoice').click(function(){
+        $("#InvoiceBill").printThis({
+            debug: false,               //* show the iframe for debugging
+            importCSS: true,            //* import page CSS
+            importStyle: true,         //* import style tags
+            printContainer: true,       //* grab outer container as well as the contents of the selector
+            //loadCSS: "path/to/my.css",  //* path to additional css file - us an array [] for multiple
+            pageTitle: "",              //* add title to print page
+            removeInline: false,        //* remove all inline styles from print elements
+            printDelay: 333,            //* variable print delay; depending on complexity a higher value may be necessary
+            header: null,               //* prefix to html
+            formValues: true            //* preserve input/form values
+        });
+    });
+</script>
+
+<?php else: ?>
+
+    <p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
+    <p><a href="<?= Backend::url('awme/stockist/sales') ?>" class="btn btn-default">Return to invoices list</a></p>
+
+<?php endif ?>
