--- a/controllers/tills/index.htm
+++ b/controllers/tills/index.htm
@@ -1,1 +1,10 @@
+<?php use AWME\Stockist\Models\Sale;?>
+<div class="list-header">
+    <div class="scoreboard">
+        <div data-control="toolbar">
+            <?=$this->makePartial('../sales/widgets/seller_scoreboard')?>
+            
+        </div>
+    </div>
+</div>
 <?= $this->listRender() ?>
