--- a/models/till/_operation_column.htm
+++ b/models/till/_operation_column.htm
@@ -1,15 +1,18 @@
 <?php 
     $style = [
         'withdraw' => [
-        	'icon'=> 'icon-upload', 
-        	'color'=> 'danger', 
-        	],
+            'icon'=> 'icon-upload', 
+            'color'=> 'danger', 
+            ],
         'deposit' => [
-        	'icon'=> 'icon-download', 
-        	'color'=> 'success', 
-        	]
+            'icon'=> 'icon-download', 
+            'color'=> 'success', 
+            ],
+        'till_report' => [
+            'icon'=> 'icon-line-chart', 
+            'color'=> 'warning', 
+            ],
     ];
-
 ?>
 
 <span class="oc-<?=$style[$value]['icon']?> text-<?=$style[$value]['color']?>">
